fixed strange spacing issue above the intro container

--- a/public/stylesheets/tlp.css
+++ b/public/stylesheets/tlp.css
@@ -203,6 +203,7 @@ html>body .main-container {
 }
 
 .intro {
+	margin-top: 10px;
 	overflow: auto;
 }
 
